--- a/scss/style.scss
+++ b/scss/style.scss
@@ -334,7 +334,9 @@ body {
 
 //================================================================================================
 .about {
+    display: flex;
     min-height: 100vh;
+    
     position: relative;
     padding: 120px 0 80px 0;
     @media (max-width: 567.98px) {
