--- a/css/style.css
+++ b/css/style.css
@@ -1121,7 +1121,7 @@ body {
             flex: 1 1 100%;
   }
   .service__content > * {
-    margin: 10px auto;
+    margin: 25px auto;
   }
 }
 
@@ -1368,4 +1368,382 @@ body {
   font-size: 14px;
   line-height: 180%;
   color: #868695;
+}
+
+.product {
+  padding: 60px 0 80px;
+}
+
+.product__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 10px;
+}
+
+@media (max-width: 991.98px) {
+  .product__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+  .product__container *.product__title {
+    text-align: center;
+  }
+  .product__container *.product__suptitle {
+    text-align: center;
+    margin: 0px auto 20px auto;
+  }
+}
+
+.product__img {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 calc(50%-5px);
+          flex: 0 1 calc(50%-5px);
+  max-width: 635px;
+  position: relative;
+}
+
+.product__img img {
+  max-width: 100%;
+}
+
+.product__content {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 calc(50%-5px);
+          flex: 0 1 calc(50%-5px);
+}
+
+.product__suptitle {
+  max-width: 235px;
+  margin-bottom: 18px;
+}
+
+.product__title {
+  max-width: 534px;
+  margin-bottom: 60px;
+}
+
+.product__spollers {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.product__item {
+  padding-left: 55px;
+}
+
+.product__item:not(:last-child) {
+  margin-bottom: 46px;
+}
+
+@media (max-width: 991.98px) {
+  .product__item:last-child {
+    margin-bottom: 46px;
+  }
+}
+
+.product__label {
+  cursor: pointer;
+  font-weight: 700;
+  line-height: 130%;
+  color: #fff;
+  margin-bottom: 20px;
+  position: relative;
+  -webkit-transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+
+@media (max-width: 767px) {
+  .product__label {
+    font-size: calc(17px + 5.1* ((100vw - 320px) / 1180));
+  }
+}
+
+@media (min-width: 767px) {
+  .product__label {
+    font-size: calc(17px + 3 * (100vw / 1180));
+  }
+}
+
+.product__text {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 180%;
+  color: #868695;
+  max-width: 320px;
+}
+
+.product__item._init .product__label {
+  cursor: pointer;
+  position: relative;
+  left: 0px;
+}
+
+.product__item._init .product__label::before,
+.product__item._init .product__label::after {
+  content: "";
+  border-radius: 6px;
+  width: 18px;
+  height: 2px;
+  background-color: #fff;
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+
+.product__item._init .product__label::before {
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+  left: -50px;
+  opacity: 1;
+}
+
+.product__item._init .product__label._active::before {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  opacity: 0;
+}
+
+.product__item._init .product__label::after {
+  -webkit-transform: rotate(45deg);
+          transform: rotate(45deg);
+  left: -38.5px;
+  opacity: 1;
+}
+
+.product__item._init .product__label._active::after {
+  -webkit-transform: rotate(0);
+          transform: rotate(0);
+  opacity: 1;
+  content: "";
+  background: url("../img/about/tick.svg") center center no-repeat;
+  background-size: contain;
+  position: absolute;
+  width: 30px;
+  height: 100%;
+  top: 0;
+  left: -55px;
+  background-color: transparent;
+}
+
+.absolute-product {
+  position: absolute;
+  width: 210px;
+  height: 241px;
+  bottom: -10%;
+  left: -5%;
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 60px 36px 36px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 479.98px) {
+  .absolute-product {
+    display: none;
+  }
+}
+
+.absolute-product__num {
+  color: #3A86FF;
+  font-weight: 700;
+  font-size: 50px;
+  margin-bottom: 70px;
+}
+
+.absolute-product__num::before {
+  content: "";
+  position: absolute;
+  width: 138px;
+  height: 138px;
+  top: 23px;
+  left: 34px;
+  border: 7px solid #3a85ff20;
+  border-radius: 50%;
+}
+
+.absolute-product__text {
+  color: #000;
+  font-weight: 600;
+}
+
+.circle {
+  position: absolute;
+  width: 138px;
+  height: 138px;
+  top: 23px;
+  left: 34px;
+  border-radius: 100%;
+  -webkit-transform: scale(-1, 1);
+          transform: scale(-1, 1);
+}
+
+.circle__item {
+  width: 50%;
+  height: 100%;
+  right: 0px;
+  position: absolute;
+  overflow: hidden;
+  -webkit-transform-origin: left center;
+          transform-origin: left center;
+}
+
+.circle._active .circle__item {
+  -webkit-animation: anim1 1s 1;
+          animation: anim1 1s 1;
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+@-webkit-keyframes anim1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50.01% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+@keyframes anim1 {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  50.01% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+  100% {
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+  }
+}
+
+.circle__half {
+  height: 100%;
+  right: 0px;
+  position: absolute;
+  border: solid 7px transparent;
+  border-top-color: #3A86FF;
+  border-left-color: #3A86FF;
+  border-radius: 50%;
+}
+
+.circle__half--clipped {
+  width: 200%;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
+}
+
+.circle._active .circle__half--clipped {
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+  -webkit-animation: anim2 0.5s linear 2;
+          animation: anim2 0.5s linear 2;
+}
+
+@-webkit-keyframes anim2 {
+  0% {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  100% {
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg);
+  }
+}
+
+@keyframes anim2 {
+  0% {
+    -webkit-transform: rotate(-45deg);
+            transform: rotate(-45deg);
+  }
+  100% {
+    -webkit-transform: rotate(135deg);
+            transform: rotate(135deg);
+  }
+}
+
+.circle__half--fix {
+  width: 100%;
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+  opacity: 0;
+}
+
+.circle._active .circle__half--fix {
+  opacity: 1;
+  -webkit-animation: anim3 1s 1;
+          animation: anim3 1s 1;
+}
+
+@-webkit-keyframes anim3 {
+  0% {
+    opacity: 0;
+  }
+  49.99% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes anim3 {
+  0% {
+    opacity: 0;
+  }
+  49.99% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 1;
+  }
 }
