all blocks done

--- a/css/style.css
+++ b/css/style.css
@@ -77,10 +77,10 @@ h1, h2, h3, h4, h5, h6 {
 /*--------------------*/
 /*Ширина полотна макета без px*/
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-weight: 400;
   color: #fff;
-  background-color: #0E0E2C;
+  background-color: #0e0e2c;
 }
 
 .wrapper {
@@ -108,12 +108,6 @@ body {
           flex: 1 1 auto;
 }
 
-.footer {
-  -webkit-box-flex: 0;
-      -ms-flex: 0 1 210px;
-          flex: 0 1 210px;
-}
-
 [class*="__container"] {
   max-width: 1180px;
   margin: 0 auto;
@@ -123,12 +117,12 @@ body {
 }
 
 .button {
-  color: #0E0E2C;
+  color: #0e0e2c;
   text-align: center;
   font-weight: 600;
   line-height: 180%;
-  background-color: #FFBE0B;
-  border: 1px solid #FFBE0B;
+  background-color: #ffbe0b;
+  border: 1px solid #ffbe0b;
   padding: 10px 31px;
   border-radius: 10px;
   display: -webkit-box;
@@ -147,15 +141,15 @@ body {
 
 .button:hover {
   background-color: transparent;
-  color: #FFBE0B;
+  color: #ffbe0b;
   -webkit-transform: scale(1.1);
           transform: scale(1.1);
 }
 
 .button_first {
-  border: 1px solid #FFBE0B;
+  border: 1px solid #ffbe0b;
   background-color: transparent;
-  color: #FFBE0B;
+  color: #ffbe0b;
   -webkit-transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
   transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
 }
@@ -180,13 +174,13 @@ body {
 
 .suptitle {
   padding: 7px 14px;
-  color: #3A86FF;
+  color: #3a86ff;
   text-align: center;
   font-size: 14px;
   font-weight: 400;
   line-height: 180%;
   letter-spacing: 1.05px;
-  border: 1px solid #3A86FF;
+  border: 1px solid #3a86ff;
   background: #172656;
 }
 
@@ -218,7 +212,7 @@ body {
 }
 
 .header {
-  background-color: #0E0E2C;
+  background-color: #0e0e2c;
   position: fixed;
   top: 0;
   left: 0;
@@ -282,8 +276,8 @@ body {
   }
   .menu__item:not(:last-child) {
     border-radius: 2px;
-    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, transparent), to(#FFBE0B));
-    background: linear-gradient(to bottom, transparent 0%, transparent 90%, #FFBE0B 100%);
+    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, transparent), to(#ffbe0b));
+    background: linear-gradient(to bottom, transparent 0%, transparent 90%, #ffbe0b 100%);
     background-size: 200% 100%;
     background-position: 200% 0;
     background-repeat: no-repeat;
@@ -301,7 +295,7 @@ body {
 }
 
 .menu__link:active {
-  color: #FFBE0B;
+  color: #ffbe0b;
 }
 
 .menu__buttons {
@@ -419,7 +413,7 @@ body {
     top: 0;
     left: 0;
     height: 120px;
-    background: #0E0E2C;
+    background: #0e0e2c;
     z-index: 2;
   }
   .menu__body._active {
@@ -667,7 +661,7 @@ body {
   left: 0%;
   width: 100%;
   height: 100%;
-  background-color: #FFBE0B;
+  background-color: #ffbe0b;
   -webkit-transform: rotate(-30.171deg);
           transform: rotate(-30.171deg);
 }
@@ -707,7 +701,7 @@ body {
   height: 100%;
   -webkit-transform: rotate(30deg);
           transform: rotate(30deg);
-  background-color: #FB5607;
+  background-color: #fb5607;
 }
 
 @media (max-width: 991.98px) {
@@ -771,6 +765,12 @@ body {
   }
 }
 
+@media (max-width: 479.98px) {
+  .form-about__img {
+    padding-bottom: 7px;
+  }
+}
+
 .form-about__mail {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -803,6 +803,7 @@ body {
     -webkit-box-flex: 1;
         -ms-flex: 1 1 auto;
             flex: 1 1 auto;
+    padding-bottom: 7px;
   }
 }
 
@@ -811,6 +812,10 @@ body {
     -webkit-box-flex: 1;
         -ms-flex: 1 0 100%;
             flex: 1 0 100%;
+  }
+  .form-about__button:hover {
+    -webkit-transform: scale(1);
+            transform: scale(1);
   }
 }
 
@@ -824,7 +829,7 @@ body {
   display: -ms-flexbox;
   display: flex;
   border-radius: 10px;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 @media (max-width: 567.98px) {
@@ -876,7 +881,7 @@ body {
 }
 
 .phillips-about__title {
-  color: #0E0E2C;
+  color: #0e0e2c;
   font-weight: 600;
   line-height: 180%;
   margin-bottom: 4px;
@@ -961,7 +966,7 @@ body {
   text-align: center;
   border-radius: 10px;
   padding: 28px 19px;
-  background-color: #FFF;
+  background-color: #fff;
 }
 
 @media (max-width: 1200.98px) {
@@ -994,7 +999,7 @@ body {
 }
 
 .progress-about__title {
-  color: #0E0E2C;
+  color: #0e0e2c;
   font-weight: 600;
   line-height: 180%;
   margin-bottom: 2px;
@@ -1032,21 +1037,21 @@ body {
 
 .progress-about__button {
   border-radius: 5px;
-  background-color: #3A86FF;
+  background-color: #3a86ff;
   padding: 7px 30px;
-  color: #FFF;
+  color: #fff;
   text-align: center;
   font-size: 12px;
   line-height: 180%;
   max-width: 116px;
   margin: 0 auto;
-  border: 1px solid #3A86FF;
+  border: 1px solid #3a86ff;
   -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
   transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
 }
 
 .progress-about__button:hover {
-  color: #3A86FF;
+  color: #3a86ff;
   background-color: transparent;
 }
 
@@ -1151,7 +1156,7 @@ body {
 .service__num {
   font-size: 38px;
   font-weight: 700;
-  line-height: calc(49 / 38 *100%);
+  line-height: calc(49 / 38 * 100%);
 }
 
 .service__num_1 {
@@ -1200,7 +1205,7 @@ body {
   color: #868695;
   font-size: 14px;
   font-weight: 400;
-  line-height: calc(25 / 14 *100%);
+  line-height: calc(25 / 14 * 100%);
   max-width: 200px;
 }
 
@@ -1210,7 +1215,7 @@ body {
 
 @media (max-width: 991.98px) {
   .do {
-    padding: 0 0 60px 0;
+    padding: 0;
   }
 }
 
@@ -1384,7 +1389,7 @@ body {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 10px;
+  gap: 100px;
 }
 
 @media (max-width: 991.98px) {
@@ -1393,6 +1398,12 @@ body {
     -webkit-box-direction: reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
+    gap: 0;
+  }
+  .product__container > * {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
   }
   .product__container *.product__title {
     text-align: center;
@@ -1405,20 +1416,35 @@ body {
 
 .product__img {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 calc(50%-5px);
-          flex: 0 1 calc(50%-5px);
-  max-width: 635px;
+      -ms-flex: 0 1 calc(50%-50px);
+          flex: 0 1 calc(50%-50px);
+  max-width: 544px;
   position: relative;
+  background-color: #3a86ff;
+  border-radius: 15px;
 }
 
 .product__img img {
-  max-width: 100%;
+  padding-top: 92px;
+  position: relative;
+  bottom: 0;
+  left: 0;
+}
+
+@media (max-width: 991.98px) {
+  .product__img {
+    background-color: transparent;
+  }
+  .product__img img {
+    padding-top: 0;
+    max-width: 100%;
+  }
 }
 
 .product__content {
   -webkit-box-flex: 0;
-      -ms-flex: 0 1 calc(50%-5px);
-          flex: 0 1 calc(50%-5px);
+      -ms-flex: 0 1 calc(50%-50px);
+          flex: 0 1 calc(50%-50px);
 }
 
 .product__suptitle {
@@ -1572,7 +1598,7 @@ body {
 }
 
 .absolute-product__num {
-  color: #3A86FF;
+  color: #3a86ff;
   font-weight: 700;
   font-size: 50px;
   margin-bottom: 70px;
@@ -1665,8 +1691,8 @@ body {
   right: 0px;
   position: absolute;
   border: solid 7px transparent;
-  border-top-color: #3A86FF;
-  border-left-color: #3A86FF;
+  border-top-color: #3a86ff;
+  border-left-color: #3a86ff;
   border-radius: 50%;
 }
 
@@ -1746,4 +1772,497 @@ body {
   100% {
     opacity: 1;
   }
+}
+
+.process {
+  padding: 60px 0;
+}
+
+@media (max-width: 479.98px) {
+  .process {
+    padding: 20px 0;
+  }
+}
+
+.process__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 60px;
+}
+
+@media (max-width: 991.98px) {
+  .process__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    row-gap: 40px;
+  }
+  .process__container * {
+    text-align: center;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 100%;
+            flex: 1 1 100%;
+    margin: 0 auto;
+    text-align: center;
+  }
+}
+
+.process__content {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 calc(50% - 30px);
+          flex: 0 1 calc(50% - 30px);
+}
+
+.process__suptitle {
+  max-width: 195px;
+  margin-bottom: 18px;
+}
+
+.process__title {
+  margin-bottom: 34px;
+}
+
+.process__text {
+  max-width: 462px;
+  color: #868695;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: calc(29 / 16 * 100%);
+}
+
+.process__image {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 calc(50% - 30px);
+          flex: 0 1 calc(50% - 30px);
+  position: relative;
+  border-radius: 20px;
+  background-color: #FFBE0B;
+  width: 544px;
+  height: 564px;
+}
+
+@media (max-width: 991.98px) {
+  .process__image {
+    max-width: 100%;
+  }
+}
+
+.process__image > img {
+  max-width: 100%;
+  position: absolute;
+  width: 541px;
+  height: auto;
+  bottom: -1px;
+  right: 0;
+}
+
+@media (max-width: 991.98px) {
+  .process__image > img {
+    position: relative;
+  }
+}
+
+.absolute-process {
+  position: absolute;
+  width: 290px;
+  height: 149px;
+  bottom: -20px;
+  right: -40px;
+  background-color: #fff;
+  border-radius: 10px;
+  text-align: center;
+  padding: 22px 35px;
+  overflow: hidden;
+}
+
+@media (max-width: 1279.98px) {
+  .absolute-process {
+    right: -10px;
+  }
+}
+
+@media (max-width: 991.98px) {
+  .absolute-process {
+    right: -50px;
+    bottom: -25px;
+  }
+}
+
+@media (max-width: 660.98px) {
+  .absolute-process {
+    position: relative;
+    width: 100%;
+    bottom: 0;
+    right: 0;
+  }
+}
+
+.absolute-process__title {
+  color: #000;
+  font-weight: 600;
+  line-height: calc(31 / 24 * 100%);
+  margin-bottom: 20px;
+}
+
+@media (max-width: 767px) {
+  .absolute-process__title {
+    font-size: calc(20px + 6.8* ((100vw - 320px) / 1180));
+  }
+}
+
+@media (min-width: 767px) {
+  .absolute-process__title {
+    font-size: calc(20px + 4 * (100vw / 1180));
+  }
+}
+
+.absolute-process__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-align: center;
+  margin-left: 15px;
+}
+
+@media (max-width: 660.98px) {
+  .absolute-process__items {
+    padding: 0 25vw;
+  }
+}
+
+.absolute-process__item {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin: 0 0 0 -15px;
+}
+
+.absolute-process__item:not(:last-child) {
+  border: 5px solid #fff;
+}
+
+.absolute-process__item > * {
+  height: 50px;
+  width: 50px;
+}
+
+.absolute-process__item:last-of-type {
+  position: relative;
+  z-index: 2;
+}
+
+.absolute-process__text {
+  margin-top: 5px;
+  height: 50px;
+  width: 50px;
+  max-width: 100%;
+  border-radius: 50%;
+  background-color: #FB5607;
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: calc(26 - 20 * 100%);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.absolute-process *.absolute-process__item:not(:last-child) {
+  -webkit-transition: all 0.9s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transition: all 0.9s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  -webkit-transform: translate(100px, 0);
+          transform: translate(100px, 0);
+  opacity: 0;
+}
+
+.absolute-process *.absolute-process__item:not(:last-child):first-of-type {
+  -webkit-transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transition: all 0.7s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+
+.absolute-process *.absolute-process__item:not(:last-child):nth-last-of-type(2) {
+  -webkit-transition: all 1.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transition: all 1.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+
+.absolute-process._active *.absolute-process__item:not(:last-child) {
+  -webkit-transform: translate(0);
+          transform: translate(0);
+  opacity: 1;
+}
+
+.contact {
+  padding: 90px 0 90px 0;
+}
+
+@media (max-width: 479.98px) {
+  .contact {
+    padding: 50px 0 50px 0;
+  }
+}
+
+.contact__container {
+  text-align: center;
+}
+
+.contact__title {
+  margin-bottom: 17px;
+}
+
+.contact__text {
+  color: #868695;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: calc(29 / 16 * 100%);
+  margin-bottom: 40px;
+}
+
+.contact__form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 486px;
+  margin: 0 auto;
+  padding: 9px 10px 9px 22px;
+  -ms-flex-line-pack: center;
+      align-content: center;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  border-radius: 18px;
+  border: 1px solid #626276;
+}
+
+.contact__form * {
+  margin-bottom: 0;
+}
+
+@media (max-width: 419.98px) {
+  .contact__form {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    padding: 9px 12px 9px;
+  }
+}
+
+.contact__input {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  padding: 0 10px;
+  color: #fff;
+  background-color: transparent;
+  font-size: 13px;
+  line-height: 180%;
+}
+
+.contact__input::-webkit-input-placeholder {
+  color: #626276;
+}
+
+.contact__input:-ms-input-placeholder {
+  color: #626276;
+}
+
+.contact__input::-ms-input-placeholder {
+  color: #626276;
+}
+
+.contact__input::placeholder {
+  color: #626276;
+}
+
+@media (max-width: 419.98px) {
+  .contact__input {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
+    padding-bottom: 7px;
+  }
+}
+
+.contact__button {
+  font-weight: 600;
+}
+
+@media (max-width: 419.98px) {
+  .contact__button {
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
+  }
+  .contact__button:hover {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+  }
+}
+
+.footer {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 210px;
+          flex: 0 1 210px;
+}
+
+.footer__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  min-height: 210px;
+}
+
+@media (max-width: 991.98px) {
+  .footer__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    row-gap: 15px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+
+.footer__logo {
+  position: relative;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.menu2__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+@media (max-width: 767.98px) {
+  .menu2__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.menu2__list > li {
+  margin: 0px 0px 0px 53px;
+}
+
+.menu2__list > li:last-child {
+  margin: 0px 0px 0px 137px;
+}
+
+@media (max-width: 1100.98px) {
+  .menu2__list > li {
+    margin: 0px 0px 0px 35px;
+  }
+  .menu2__list > li:last-child {
+    margin: 0px 0px 0px 63px;
+  }
+}
+
+@media (max-width: 767.98px) {
+  .menu2__list > li {
+    margin: 0;
+  }
+  .menu2__list > li:last-child {
+    margin: 10px 0px 0px 0px;
+  }
+}
+
+@media (min-width: 768px) {
+  .menu2__item {
+    -webkit-transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.475) 0s;
+    transition: all 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.475) 0s;
+  }
+  .menu2__item:not(:last-child) {
+    border-radius: 2px;
+    background: -webkit-gradient(linear, left top, left bottom, from(transparent), color-stop(90%, transparent), to(#ffbe0b));
+    background: linear-gradient(to bottom, transparent 0%, transparent 90%, #ffbe0b 100%);
+    background-size: 200% 100%;
+    background-position: 200% 0;
+    background-repeat: no-repeat;
+  }
+  .menu2__item:not(:last-child):hover {
+    background-position: 150% 0;
+  }
+}
+
+.menu2__link {
+  color: #fff;
+  line-height: 140%;
+  -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+
+.menu2__link:active {
+  color: #ffbe0b;
+}
+
+.menu2__link {
+  padding: 8px;
+  -webkit-transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+  transition: all 0.3s cubic-bezier(0.075, 0.82, 0.165, 1) 0s;
+}
+
+.menu2__link:not(:last-child) {
+  margin-right: 20px;
+}
+
+.menu2__link:hover svg path {
+  fill: white;
+}
+
+.menu2__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.menu2__list > li {
+  padding: 10px 0;
 }
